examples/should_pass/assign-last-cycle.anvil
chan ch = {
    left req : (logic@#1)
}

proc top(e : right ch) =
    reg r : logic
    loop {
        send e::req (!r) =>
        if 1'b1 then
            (set r := 1'b1 => set r := 1'b0)
        else
            set r := 1'b1
    }
