examples/should_fail/undefined-msg.anvil
proc top() {
    loop {
        cycle 1 >> send ch.req (1'b0)
    }
}
